helper card overflow fix

--- a/src/pages/my_reservations/my_reservation.scss
+++ b/src/pages/my_reservations/my_reservation.scss
@@ -63,7 +63,7 @@
       text-align: center;
       border-radius: $default-border-radius;
       box-shadow: $default-box-shadow;
-      overflow: auto;
+      overflow: hidden;
 
       &__image {
         grid-area: image;
@@ -178,6 +178,10 @@
         &__places {
           margin-top: 80px;
           font-size: 12px;
+        }
+
+        & p{
+          font-size: .9rem;
         }
       }
     }
